testsuite/tests/flambda2/unboxable_local_returning.compilers.reference
>> Fatal error: Local allocation without a region
Fatal error: exception Misc.Fatal_error
Raised at Misc.fatal_errorf.(fun) in file "utils/misc.ml", line 22, characters 14-31
Called from Flambda2_from_lambda__Closure_conversion.make_unboxed_function_wrapper in file "middle_end/flambda2/from_lambda/closure_conversion.ml", lines 2479-2481, characters 4-151
Called from unknown location
Called from Flambda2_from_lambda__Closure_conversion_aux.Acc.eval_branch_free_names in file "middle_end/flambda2/from_lambda/closure_conversion_aux.ml", line 693, characters 17-65
Called from Flambda2_from_lambda__Closure_conversion_aux.Acc.measure_cost_metrics in file "middle_end/flambda2/from_lambda/closure_conversion_aux.ml", line 699, characters 34-63
Called from Flambda2_from_lambda__Closure_conversion.close_functions.(fun) in file "middle_end/flambda2/from_lambda/closure_conversion.ml", lines 3161-3165, characters 10-361
Called from Stdlib__List.fold_left in file "list.ml", line 130, characters 24-34
Called from Flambda2_from_lambda__Closure_conversion.close_functions in file "middle_end/flambda2/from_lambda/closure_conversion.ml", lines 3152-3169, characters 4-779
Called from Flambda2_from_lambda__Closure_conversion.close_let_rec in file "middle_end/flambda2/from_lambda/closure_conversion.ml", lines 3296-3298, characters 4-134
Called from Flambda2_from_lambda__Closure_conversion.wrap_final_module_block.body in file "middle_end/flambda2/from_lambda/closure_conversion.ml", line 4066, characters 20-35
Called from Flambda2_from_lambda__Closure_conversion_aux.Acc.eval_branch_free_names in file "middle_end/flambda2/from_lambda/closure_conversion_aux.ml", line 693, characters 17-65
Called from Flambda2_from_lambda__Closure_conversion_aux.Let_cont_with_acc.build_non_recursive in file "middle_end/flambda2/from_lambda/closure_conversion_aux.ml", line 1232, characters 6-44
Called from Flambda2_from_lambda__Closure_conversion.close_program in file "middle_end/flambda2/from_lambda/closure_conversion.ml", lines 4098-4099, characters 4-109
Called from Flambda2.lambda_to_flambda in file "middle_end/flambda2/flambda2.ml", lines 312-315, characters 4-240
Called from Flambda2.lambda_to_cmm.run in file "middle_end/flambda2/flambda2.ml", line 330, characters 6-68
Called from Asmgen.compile_implementation.(fun) in file "asmcomp/asmgen.ml", line 712, characters 26-69
Called from Asmgen.compile_unit.(fun) in file "asmcomp/asmgen.ml", line 623, characters 10-16
Called from Misc.try_finally in file "utils/misc.ml", line 36, characters 8-15
Re-raised at Misc.try_finally in file "utils/misc.ml", line 50, characters 10-56
Called from Asmgen.compile_unit.(fun) in file "asmcomp/asmgen.ml", lines 621-629, characters 6-347
Called from Misc.try_finally in file "utils/misc.ml", line 36, characters 8-15
Re-raised at Misc.try_finally in file "utils/misc.ml", line 50, characters 10-56
Called from Asmgen.compile_unit in file "asmcomp/asmgen.ml", lines 617-632, characters 2-645
Called from Optcompile.Make.compile_from_tlambda.(fun) in file "optcomp/optcompile.ml", lines 122-125, characters 10-226
Called from Compile_common.implementation.(fun) in file "driver/compile_common.ml", lines 196-198, characters 71-114
Called from Misc.try_finally in file "utils/misc.ml", line 36, characters 8-15
Re-raised at Misc.try_finally in file "utils/misc.ml", line 50, characters 10-56
Called from Misc.try_finally in file "utils/misc.ml", line 36, characters 8-15
Re-raised at Misc.try_finally in file "utils/misc.ml", line 50, characters 10-56
Called from Compenv.process_action.impl in file "driver/compenv.ml", lines 746-747, characters 4-95
Called from Stdlib__List.iter in file "list.ml", line 119, characters 12-15
Called from Compenv.process_deferred_actions in file "driver/compenv.ml", lines 850-851, characters 2-85
Called from Optmaindriver.main in file "driver/optmaindriver.ml", lines 89-94, characters 6-185
Re-raised at Location.report_exception.loop in file "parsing/location.ml", line 1156, characters 14-25
Called from Optmaindriver.main in file "driver/optmaindriver.ml", line 192, characters 4-35
Called from Oxcaml_main in file "driver/oxcaml_main.ml", lines 5-7, characters 7-140
